Start login page

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -11,10 +11,10 @@
       crossorigin="anonymous"
     >
   </head>
-  <body>
+  <body class="vh-100 d-flex flex-column">
     {% include 'navbar.html' %}
 
-    <div class="container">
+    <div class="container flex-fill">
       {% block content %}
       {% endblock %}
     </div>
