--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -11,12 +11,30 @@
       crossorigin="anonymous"
     >
   </head>
-  <body class="vh-100 d-flex flex-column">
+  <body class="vh-100 d-flex flex-column overflow-hidden">
     {% include 'navbar.html' %}
 
-    <div class="container flex-fill">
+    <div class="container flex-fill position-relative">
       {% block content %}
       {% endblock %}
+
+      {% if messages %}
+        {% for message in messages %}
+          <div
+            class="alert alert-danger alert-dismissible fade show position-absolute"
+            style="top: 90%; left: 43%;"
+            role="alert"
+          >
+            {{ message }}
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="alert"
+              aria-label="Close"
+            ></button>
+          </div>
+        {% endfor %}
+      {% endif %}
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
