--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,8 +2,35 @@
 
 {% block content %}
 <div class="h-100 d-flex justify-content-center align-items-center">
-  <div class="text-bg-success p-3 rounded">
-    Login
+  <div class="text-bg-dark p-5 rounded-3">
+    <h2 class="text-center text-success mb-5">
+      Playlists <br /> Tracker
+    </h2>
+    <form method="POST" action="{% url 'login' %}">
+      {% csrf_token %}
+
+      <div class="mb-4">
+        <input
+          type="text"
+          class="form-control"
+          name="username"
+          placeholder="Username"
+          required
+        >
+      </div>
+      <div class="mb-5">
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          placeholder="Password"
+          required
+        >
+      </div>
+      <button type="submit" class="btn btn-success w-100">
+        Login
+      </button>
+    </form>
   </div>
 </div>
 {% endblock %}
