--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,25 +1,27 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-  <div class="container-fluid">
+  <div class="container-fluid d-flex justify-content-between">
     <a class="navbar-brand" href="{% url 'home' %}">
       Playlists Tracker
     </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-      </ul>
-    </div>
+    <ul class="navbar-nav mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          href="
+            {% if user.is_authenticated %}
+              {% url 'logout' %}
+            {% else %}
+              {% url 'login' %}
+            {% endif %}
+          "
+        >
+          {% if user.is_authenticated %}
+            Logout
+          {% else %}
+            Login
+          {% endif %}
+        </a>
+      </li>
+    </ul>
   </div>
 </nav>
